--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="header">
-            <div class="logo"></div>
+            <div class="logo animated flash"></div>
         </nav>
     </header><!--header-->
     <section class="chamada">
@@ -63,8 +63,41 @@
                <div class="clear"></div>
             </div><!--view-->
         </div><!--bloco2-->
-        <div class="clear"></div>
     </section><!--chamda-->
+    <div class="clear"></div>
+
+    <section class="form">
+        <div class="container">
+            <div class="formulario">
+                <div class="line animated fadeIn">
+                    <div class="ln"></div>
+                    <h2>Deseja fazer um orçamento ?</h2>
+                    <h3><i class="fa fa-angle-down"></i></h3>
+                </div><!--line-->
+                <form>
+                    <label for="nome">Nome: </label><br>
+                        <input type="text" name="nome" placeholder="Nome..."><br>
+                    <label for="email">E-mail: </label><br>
+                        <input type="email" name="email" placeholder="E-mail..."><br>
+                    <label for="msg">Mensagem: </label><br>
+                        <textarea placeholder="Sua mensagem..."></textarea>
+                    <input type="submit" value="Enviar!">
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="line animated fadeIn">
+            <div class="ln"></div>
+        </div><!--line-->
+        <div class="footer-contato">
+            <a href=""><i class="fa fa-address-book"></i></a>
+            <a href="https://github.com/LucasChlz"><i class="fa fa-github"></i></a>
+            <a href="https://twitter.com/Schelz7"><i class="fa fa-twitter-square"></i></a>
+        </div>
+    </footer>
+   
     
     
 </body>
